[package]
name = "rustbook"
version = "0.1.0"
authors = ["Amjad Jibon <amjad.jibon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "config"
path = "src/bin/config.rs"