[package]
name = "rustbook"
version = "0.1.0"
authors = ["Amjad Jibon <amjad.jibon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
log4rs = "1.0.0"
diesel = { version = "1.4.4", features = ["postgres"] }
sqlx = { version = "0.4.1", features = [ "postgres" ] }
tokio = { version = "1.12.0", features = ["full"] }

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "config"
path = "src/bin/config.rs"

[[bin]]
name = "logger"
path = "src/bin/logger.rs"